--- a/public/signup.html
+++ b/public/signup.html
@@ -28,14 +28,14 @@
 					<div class="form-group">
 						<label>Password</label>
 						<div class="input-group">
-							<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
 							<input type="password" ng-model="reguser.password" ng-change="checkMatch()" placeholder="Enter your password" class="form-control" name="password" id="password1" required="true">
 						</div>
 					</div>
 					<div class="form-group">
 						<label>Confirm password</label>
 						<div class="input-group">
-							<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+							<span class="input-group-addon"><i class="fa fa-lock"></i></span>
 							<input type="password" ng-model="pwd2" ng-change="checkMatch(); confirmFill = true" placeholder="Confirm your password" class="form-control" name="password-confirm" id="password2" required="true">
 						</div>
 						<p ng-show="!match && confirmFill" class="alert alert-danger">Passwords don't match</p>
