--- a/public/profile.html
+++ b/public/profile.html
@@ -138,7 +138,7 @@
 						<tr>
 							<th>Name</th>
 							<th>Place</th>
-							<th>Time</th>
+							<th>Dates</th>
 							<th>Role</th>
 							<th>Team Name</th>
 							<th>Comment</th>
@@ -187,16 +187,10 @@
 	<td class="currencySign" data-monetary-amount="{{x.pivot_price_paid - x.pivot_price_owed | currency:'€'}}"></td>
 	<td ng-click="openDetails(x)" ng-hide="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-remove"></span></td>
 	<td ng-click="openDetails(x)" ng-show="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-ok"></span></td>
-	<td ng-hide="x.pivot_attended == 1" class="text-center">
-		<button ng-click="editContact(x)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
-	</td>
-	<td ng-hide="x.pivot_attended == 1" class="text-center">
-		<button ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
-	</td>
-	<td ng-show="x.pivot_attended == 1" class="text-center successInput">
+	<td class="text-center successInput">
 		<div class="form-group">
 			<label for="success">Success</label>
-			<select id="success" ng-change="setSuccess(success, x.rankingvalue, x.pivot_id)" class="form-control" ng-options="success as success.label for success in successes track by success.id" ng-model="success"></select>
+			<select id="success" ng-change="setSuccess(success, x.rankingvalue, x.pivot_id)" class="form-control" ng-options="success as success.label for success in successes track by success.id" ng-model="success" ng-disabled="x.pivot_attended != 1"></select>
 			<small>{{x.pivot_success}}</small>
 		</div>
 		<div class="form-group" ng-hide="x.pivot_success == null || x.pivot_success == 'judge' || x.pivot_success == 'judge2'">
@@ -210,8 +204,12 @@
 			<small>{{x.pivot_partner2}}</small>
 		</div>
 	</td>
-	<td ng-show="x.pivot_attended == 1" class="text-center">
+	<td class="text-center">
 		{{x.pivot_points}}
+	</td>
+	<td ng-hide="x.pivot_attended == 1" class="text-center">
+		<button ng-click="editContact(x)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
+		<button ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
 	</td>
 </script>
 
@@ -236,6 +234,8 @@
 	<td class="currencySign" data-monetary-amount="{{x.pivot_price_paid - x.pivot_price_owed | currency:'€'}}"></td>
 	<td ng-hide="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-remove"></span></td>
 	<td ng-show="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-ok"></span></td>
+	<td></td>
+	<td></td>
 	<td>
 		<button class="btn btn-sm btn-success" ng-click="saveReg($index, x.pivot_id)" style="margin: 3px">Save</button>
 		<button class="btn btn-sm btn-danger" ng-click="reset()" style="margin: 3px">Cancel</button>
