added margin to button

--- a/public/profile.html
+++ b/public/profile.html
@@ -209,7 +209,7 @@
 	</td>
 	<td ng-hide="x.pivot_attended == 1" class="text-center">
 		<button ng-click="editContact(x)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
-		<button ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span></button>
+		<button ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger" style="margin-top: 4px"><span class="glyphicon glyphicon-trash"></span></button>
 	</td>
 </script>
 
