--- a/public/profile.html
+++ b/public/profile.html
@@ -148,6 +148,7 @@
 							<th>Attended</th>
 							<th>Success</th>
 							<th>Points</th>
+							<th></th>
 						</tr>
 						</thead>
 						<tbody>
@@ -165,6 +166,7 @@
 							<td></td>
 							<td></td>
 							<td>{{totalPoints}}</td>
+							<td></td>
 						</tr>
 						</tbody>
 					</table>
@@ -207,9 +209,9 @@
 	<td class="text-center">
 		{{x.pivot_points}}
 	</td>
-	<td ng-hide="x.pivot_attended == 1" class="text-center">
-		<button ng-click="editContact(x)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
-		<button ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger" style="margin-top: 4px"><span class="glyphicon glyphicon-trash"></span></button>
+	<td class="text-center">
+		<button ng-hide="x.pivot_attended == 1" ng-click="editContact(x)" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span></button>
+		<button ng-hide="x.pivot_attended == 1" ng-click="unreg(x.pivot_id, x.id)" class="btn btn-danger" style="margin-top: 4px"><span class="glyphicon glyphicon-trash"></span></button>
 	</td>
 </script>
 
