add last_login function

--- a/public/signup.html
+++ b/public/signup.html
@@ -70,7 +70,7 @@
                         <label>Food Preference</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-cutlery"></i></span>
-                            <input type="text" ng-model="reguser.food" placeholder="Veggie? Vegan? Allergies? Don't like tomatoes?" class="form-control" name="Food" id="Food">
+                            <input type="text" ng-model="reguser.food" placeholder="Veggie? Vegan? Allergies? Don't like tomatoes?" class="form-control" name="Food" id="Food" required>
                         </div>
                     </div>
 
