--- a/public/profile.html
+++ b/public/profile.html
@@ -152,7 +152,7 @@
 						</tr>
 						</thead>
 						<tbody>
-						<tr ng-repeat="x in user.tournaments" ng-include="getTemplate(x)"></tr>
+						<tr ng-repeat="x in user.tournaments" ng-include="getTemplate(x)" class="pointer"></tr>
 						<tr style="border-top: solid 2px black; font-weight: bold">
 							<td></td>
 							<td></td>
