started rewriting navbar

--- a/public/profile.html
+++ b/public/profile.html
@@ -9,7 +9,7 @@
 					</div>
 				</div>
 				<div class="intro-text">
-					<span class="">
+					<span>
 						<p class="name"> Hello {{user.vorname}}</p>
 					</span>
 					<hr class="star-light">
