--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
 <section>
 	<div class="container">
 
-		<div class="col-sm-6 col-sm-offset-3">
+		<div class="col-md-6 offset-md-3">
 
 			<!-- LOGIN FORM -->
 			<form ng-submit="login()">
@@ -21,14 +21,14 @@
 				<div class="form-group">
 					<label>Email</label>
 					<div class="input-group">
-						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+						<span class="input-group-addon"><i class="fa fa-user" aria-hidden="true"></i></span>
 						<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="loginuser.email" placeholder="Enter your email" class="form-control" required="true">
 					</div>
 				</div>
 				<div class="form-group">
 					<label>Password</label>
 					<div class="input-group">
-						<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+						<span class="input-group-addon"><i class="fa fa-lock" aria-hidden="true"></i></span>
 						<input type="password" name="password" ng-model="loginuser.password" placeholder="Enter your password" class="form-control" name="password" required="true">
 					</div>
 				</div>
