--- a/public/showImageDialog.html
+++ b/public/showImageDialog.html
@@ -10,5 +10,5 @@
 </div>
 
 <div class="ngdialog-buttons" style="padding-top: 10px">
-    <button class="btn btn-raised btn-danger pull-right" ng-click="close()">Close</button>
+    <button class="btn btn-outline-danger pull-right" ng-click="close()">Close</button>
 </div>
