--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -37,5 +37,5 @@
 </div>
 
 <div class="ngdialog-buttons">
-	<button class="btn btn-raised btn-success pull-right" ng-click="reg()">Anmelden</button>
+	<button class="btn btn-outline-success pull-right" ng-click="reg()">Anmelden</button>
 </div>
