--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -172,7 +172,7 @@
 					</div>
 				</div>
 
-				<button type="submit" class="btn btn-raised btn-lg btn-success pull-right">Turnier erstellen</button>
+				<button type="submit" class="btn btn-lg btn-outline-success pull-right">Turnier erstellen</button>
 			</form>
 
 		</div>
