--- a/public/profileTournamentDialog.html
+++ b/public/profileTournamentDialog.html
@@ -62,5 +62,5 @@
 </div>
 
 <div class="ngdialog-buttons">
-    <button class="btn btn-raised btn-danger pull-right" ng-click="close()">Close</button>
+    <button class="btn btn-outline-danger pull-right" ng-click="close()">Close</button>
 </div>
