--- a/public/signup.html
+++ b/public/signup.html
@@ -74,7 +74,7 @@
                         </div>
                     </div>
 
-					<button type="submit" class="btn btn-raised btn-warning btn-lg" style="margin-top: 15px">Signup</button>
+					<button type="submit" class="btn btn-outline-warning btn-lg" style="margin-top: 15px">Signup</button>
 
 				</fieldset>
 			</form>
