--- a/public/finances.html
+++ b/public/finances.html
@@ -74,8 +74,8 @@
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('name')">Name</button></th>
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('startdate')">Date</button></th>
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_role')">Role</button></th>
-                    <th class="col-md-1"><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_paid')">Price Paid</button></th>
-                    <th class="col-md-1"><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_owed')">Price Owed</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_paid')">Price Paid</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_owed')">Price Owed</button></th>
                     <th>Debt</th>
 					<th></th>
                 </tr>
