--- a/public/signup.html
+++ b/public/signup.html
@@ -81,7 +81,7 @@
 
 			<hr>
 
-			<p>Already have an account? <a href="/#">Login</a></p>
+			<p>Already have an account? <a href="/#/">Login</a></p>
 
 		</div>
 	</div>
