moved bug report input to center and added on-hover note to profile pic

--- a/public/profile.html
+++ b/public/profile.html
@@ -5,7 +5,10 @@
 
 				<div>
 					<div class="image-cropper">
-						<a href="#/imageUpload"><img class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'"/></a>
+						<a href="#/imageUpload">
+							<img class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'"/>
+							<p>Add your<br>profile picture</p>
+						</a>
 					</div>
 				</div>
 				<div class="intro-text">
