--- a/public/bugReport.html
+++ b/public/bugReport.html
@@ -12,7 +12,7 @@
 
 <section>
     <div class="container">
-        <div class="col-md-6">
+        <div class="col-md-6 offset-md-3">
 
             <!-- LOGIN FORM -->
             <form ng-submit="reportBug()">
