--- a/public/signup.html
+++ b/public/signup.html
@@ -78,7 +78,7 @@
                         <label>Signup Password</label>
                         <div class="input-group">
                             <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                            <input type="password" ng-model="reguser.signup_password" placeholder="Get password from the BDU board members" class="form-control" required>
+                            <input name="signup_password" type="password" ng-model="reguser.signup_password" placeholder="Get password from the BDU board members" class="form-control" required>
                         </div>
                     </div>
 
