removed http from insecure content

--- a/public/profile.html
+++ b/public/profile.html
@@ -4,7 +4,7 @@
 			<div class="col-sm-12">
 				<div class="image-cropper">
 					<a href="#/imageUpload">
-						<img class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'"/>
+						<img class="img-hor" ng-src="//debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'"/>
 						<p>Add your<br>profile picture</p>
 					</a>
 				</div>
