Revert: removed http from insecure content

--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -67,7 +67,7 @@
 					<td class="text-center hidden-xs">{{users.id}}</td>
 					<td>
 						<a href="" ng-click="ShowImageDialog(users.vorname, users.image)">
-							<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor" ng-src="//debating.de/BDUDBdev/userpics/{{users.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+							<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{users.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
 						</a>
 					</td>
 					<td>
