--- a/public/finances.html
+++ b/public/finances.html
@@ -80,6 +80,7 @@
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('name')">Name</button></th>
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('startdate')">Date</button></th>
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_role')">Role</button></th>
+                    <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_success')">Success</button></th>
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_points')">Points</button></th>
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_paid')">Price Paid</button></th>
                     <th><button class="btn btn-outline-info btn-sm" ng-click="sortTournaments('pivot_price_owed')">Price Owed</button></th>
@@ -107,12 +108,25 @@
     </td>
     <td>{{tournament.startdate | date: 'dd.MM.yyyy'}}</td>
     <td>{{tournament.pivot_role}}</td>
-    <td>{{tournament.pivot_points}}</td>
+	<!--<td>{{tournament.pivot_success}} <i ng-click="showSuccessOptions" class="fa fa-pencil-square-o text-info pointer" aria-hidden="true"></i></td>-->
+	<td class="text-center" ng-controller="successCtrl" ng-include="getSuccessTemplate(tournament.id)"></td>
+	<!--<td>-->
+		<!--<div class="form-group">-->
+			<!--<label for="success">Success</label>-->
+			<!--<select id="success"-->
+					<!--ng-change="setSuccess(success, tournament.rankingvalue, tournament.pivot_id)"-->
+					<!--class="form-control" ng-options="success as success.label for success in successes track by success.id"-->
+					<!--ng-model="success(tournament.pivot_success)"-->
+					<!--ng-disabled="tournament.pivot_attended != 1">-->
+			<!--</select>-->
+		<!--</div>-->
+	<!--</td>-->
+	<td>{{tournament.pivot_points}}</td>
     <td>{{tournament.pivot_price_paid | currency:'€'}}</td>
     <td>{{tournament.pivot_price_owed | currency:'€'}}</td>
     <td class="currencySign" data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:'€'}}"></td>
     <td class="text-center">
-        <button ng-click="editContact(tournament)" class="btn btn-outline-info"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+        <button ng-click="editReg(tournament)" class="btn btn-outline-info"><i class="fa fa-pencil" aria-hidden="true"></i></button>
 		<button ng-click="setPaid(tournament.pivot_id, tournament.pivot_price_owed)" class="btn btn-outline-success" ng-disabled="tournament.pivot_price_owed == tournament.pivot_price_paid || !(tournament.pivot_price_owed > 0)">
 			<i class="fa fa-eur" aria-hidden="true"></i>
 		</button>
@@ -127,6 +141,7 @@
     </td>
     <td>{{tournament.startdate | date: 'dd.MM.yyyy'}}</td>
     <td>{{tournament.pivot_role}}</td>
+    <td>{{tournament.pivot_success}}</td>
     <td>{{tournament.pivot_points}}</td>
     <td>
         <input class="form-control" type="number" step="0.01" ng-model="selected.pivot_price_paid" />
