--- a/public/profile.html
+++ b/public/profile.html
@@ -151,7 +151,7 @@
 						</tr>
 						</thead>
 						<tbody>
-						<tr ng-repeat="x in user.tournaments" ng-include="getTemplate(x)" class="pointer"></tr>
+						<tr ng-repeat="tournament in user.tournaments" ng-include="getTemplate(tournament)" class="pointer"></tr>
 						<tr style="border-top: solid 2px black; font-weight: bold">
 							<td></td>
 							<td></td>
@@ -176,47 +176,31 @@
 
 <!--TEMPLATE FOR NORMAL VIEW-->
 <script type="text/ng-template" id="display">
-	<td ng-click="openDetails(x)" style="text-align: left">{{x.name}}</td>
-	<td ng-click="openDetails(x)">{{x.startdate | date:'dd.MM.yyyy'}}<br>{{x.enddate | date:'dd.MM.yyyy'}}</td>
-	<td ng-click="openDetails(x)">{{x.pivot_role}}</td>
-	<td ng-click="openDetails(x)">{{x.pivot_teamname}}</td>
-	<td ng-click="openDetails(x)">{{x.pivot_comment}}</td>
-	<td class="preventWrap" ng-click="openDetails(x)">{{x.pivot_price_owed | currency:"€"}}</td>
-	<td class="preventWrap" ng-click="openDetails(x)">{{x.pivot_price_paid | currency:"€"}}</td>
-	<td class="currencySign" data-monetary-amount="{{x.pivot_price_paid - x.pivot_price_owed | currency:'€'}}"></td>
-	<td ng-click="openDetails(x)" ng-show="x.pivot_attended == 0" class="text-center"><i class="fa fa-times" aria-hidden="true"></i></td>
-	<td ng-click="openDetails(x)" ng-show="x.pivot_attended == 1" class="text-center"><i class="fa fa-check" aria-hidden="true"></i></td>
-	<td ng-click="openDetails(x)" ng-show="x.pivot_attended == 2" class="text-center">You can go!</td>
-	<td class="text-center successInput">
-		<div class="form-group">
-			<label for="success">Success</label>
-			<select id="success" ng-change="setSuccess(success, x.rankingvalue, x.pivot_id)" class="form-control" ng-options="success as success.label for success in successes track by success.id" ng-model="success" ng-disabled="x.pivot_attended != 1"></select>
-			<small>{{x.pivot_success}}</small>
-		</div>
-		<div class="form-group" ng-hide="x.pivot_success == null || x.pivot_success == 'judge' || x.pivot_success == 'judge2'">
-			<label for="partner1">Partner 1</label>
-			<select id="partner1" ng-change="setPartner(partner1.id, x.pivot_id, 1)" class="form-control" ng-options="partner as (partner.vorname + ' ' + partner.name) for partner in partners track by partner.id" ng-model="partner1"></select>
-			<small>{{x.pivot_partner1}}</small>
-		</div>
-		<div class="form-group" ng-hide="x.format.toLowerCase() == 'bps' || x.format.toLowerCase() == 'bp' || x.pivot_partner1 == null || x.pivot_success == null || x.pivot_success == 'judge' || x.pivot_success == 'judge2'">
-			<label for="partner2">Partner 2</label>
-			<select id="partner2" ng-change="setPartner(partner2.id, x.pivot_id, 2)" class="form-control"  ng-options="partner as (partner.vorname + ' ' + partner.name) for partner in partners track by partner.id" ng-model="partner2"></select>
-			<small>{{x.pivot_partner2}}</small>
-		</div>
+	<td ng-click="openDetails(tournament)" style="text-align: left">{{tournament.name}}</td>
+	<td ng-click="openDetails(tournament)">{{tournament.startdate | date:'dd.MM.yyyy'}}<br>{{tournament.enddate | date:'dd.MM.yyyy'}}</td>
+	<td ng-click="openDetails(tournament)">{{tournament.pivot_role}}</td>
+	<td ng-click="openDetails(tournament)">{{tournament.pivot_teamname}}</td>
+	<td ng-click="openDetails(tournament)">{{tournament.pivot_comment}}</td>
+	<td class="preventWrap" ng-click="openDetails(tournament)">{{tournament.pivot_price_owed | currency:"€"}}</td>
+	<td class="preventWrap" ng-click="openDetails(tournament)">{{tournament.pivot_price_paid | currency:"€"}}</td>
+	<td class="currencySign" data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:'€'}}"></td>
+	<td ng-click="openDetails(tournament)" ng-show="tournament.pivot_attended == 0" class="text-center"><i class="fa fa-times" aria-hidden="true"></i></td>
+	<td ng-click="openDetails(tournament)" ng-show="tournament.pivot_attended == 1" class="text-center"><i class="fa fa-check" aria-hidden="true"></i></td>
+	<td ng-click="openDetails(tournament)" ng-show="tournament.pivot_attended == 2" class="text-center">You can go!</td>
+	<td ng-controller="successCtrl" ng-include="getSuccessTemplate(tournament.id)"></td>
+	<td class="text-center">
+		{{tournament.pivot_points}}
 	</td>
 	<td class="text-center">
-		{{x.pivot_points}}
-	</td>
-	<td class="text-center">
-		<button ng-hide="x.pivot_attended == 1" ng-click="editContact(x)" class="btn btn-sm btn-outline-info"><i class="fa fa-pencil" aria-hidden="true"></i></button>
-		<button ng-hide="x.pivot_attended == 1" ng-click="unreg(x.pivot_id, x.id)" class="btn btn-sm btn-outline-danger" style="margin-top: 4px"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
+		<button ng-hide="tournament.pivot_attended == 1" ng-click="editContact(tournament)" class="btn btn-sm btn-outline-info"><i class="fa fa-pencil" aria-hidden="true"></i></button>
+		<button ng-hide="tournament.pivot_attended == 1" ng-click="unreg(tournament.pivot_id, tournament.id)" class="btn btn-sm btn-outline-danger" style="margin-top: 4px"><i class="fa fa-trash-o" aria-hidden="true"></i></button>
 	</td>
 </script>
 
 <!--TEMPLATE FOR INLINE EDIT VIEW-->
 <script type="text/ng-template" id="edit">
-	<td style="text-align: left">{{x.name}}</td>
-	<td>{{x.startdate | date:'dd.MM.yyyy'}}<br>{{x.enddate | date:'dd.MM.yyyy'}}</td>
+	<td style="text-align: left">{{tournament.name}}</td>
+	<td>{{tournament.startdate | date:'dd.MM.yyyy'}}<br>{{tournament.enddate | date:'dd.MM.yyyy'}}</td>
 	<td>
 		<select class="form-control" ng-options="role as role.label for role in roles track by role.id" ng-model="selected.pivot_role">
 		</select>
@@ -228,15 +212,16 @@
 		<input style="min-width: 80px" disabled class="form-control" type="text" />
 	</td>
 	<td><textarea style="min-width: 180px" rows="3" placeholder="You can leave a comment here." ng-model="selected.pivot_comment" class="form-control"></textarea></td>
-	<td class="preventWrap">{{x.pivot_price_owed | currency:"€"}}</td>
-	<td class="preventWrap">{{x.pivot_price_paid | currency:"€"}}</td>
-	<td class="currencySign" data-monetary-amount="{{x.pivot_price_paid - x.pivot_price_owed | currency:'€'}}"></td>
-	<td ng-hide="x.pivot_attended == 1" class="text-center"><i class="fa fa-times" aria-hidden="true"></i></td>
-	<td ng-show="x.pivot_attended == 1" class="text-center"><i class="fa fa-check" aria-hidden="true"></i></td>
+	<td class="preventWrap">{{tournament.pivot_price_owed | currency:"€"}}</td>
+	<td class="preventWrap">{{tournament.pivot_price_paid | currency:"€"}}</td>
+	<td class="currencySign" data-monetary-amount="{{tournament.pivot_price_paid - tournament.pivot_price_owed | currency:'€'}}"></td>
+	<td ng-hide="tournament.pivot_attended == 1" class="text-center"><i class="fa fa-times" aria-hidden="true"></i></td>
+	<td ng-show="tournament.pivot_attended == 1" class="text-center"><i class="fa fa-check" aria-hidden="true"></i></td>
 	<td></td>
 	<td></td>
 	<td>
-		<button class="btn btn-sm btn-outline-success" ng-click="saveReg($index, x.pivot_id)" style="margin: 3px">Save</button>
+		<button class="btn btn-sm btn-outline-success" ng-click="saveReg($index, tournament.pivot_id)" style="margin: 3px">Save</button>
 		<button class="btn btn-sm btn-outline-danger" ng-click="reset()" style="margin: 3px">Cancel</button>
 	</td>
 </script>
+
