--- a/public/finances.html
+++ b/public/finances.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="intro-text">
-                    <span class="name"><span class="fa fa-group"></span> Finanz Übersicht</span>
+                    <span class="name"><span class="fa fa-group"></span> Finanzübersicht</span>
                 </div>
             </div>
         </div>
