--- a/public/finances.html
+++ b/public/finances.html
@@ -58,7 +58,7 @@
                     <td class="hidden-xs">#</td>
                     <td>{{users.length}}</td>
                     <td></td>
-                    <td></td>
+                    <td>{{totalClubDebt | currency:"€"}}</td>
                     <td></td>
                     <td></td>
                 </tr>
