--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -18,16 +18,9 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="user-info-table">
 
-					<h2>
-						Sorry you don't have the right to see this.<br><br>
-						Please stop reading here!<br><br><br><br><br><br><br>
-					</h2>
-
-					<h2>
-						Uhm.. seems like you kept going! :/<br>
-						Well, if you like reading so much,<br>maybe you'll enjoy this:<br><br>
-					</h2>
-
+					<h3>
+						Sorry you don't have the right to see this.
+					</h3>
 				</div>
 			</div>
 		</div>
