--- a/public/login.html
+++ b/public/login.html
@@ -1,21 +1,20 @@
-<header>
+<section class="landing">
+
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12">
-				<div class="intro-text">
-					<span class="name"><span class="fa fa-sign-in"></span> Login</span>
-				</div>
+			<div class="col-lg-12 title">
+				<h1>Welcome to the BDU</h1>
 			</div>
 		</div>
 	</div>
-</header>
 
-<section>
 	<div class="container">
 
-		<div class="col-md-6 offset-md-3">
-
+		<div class="col-md-6 offset-md-3 login">
+			<h4><span class="fa fa-sign-in"></span> Login</h4>
+			<hr />
 			<div>
+
 				<!-- LOGIN FORM -->
 				<form ng-submit="login()">
 					<p ng-show="error_message.length > 0" class="alert alert-danger">{{error_message}}</p>
