--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 title">
-				<h1>Welcome to the BDU</h1>
+				<img ng-src="images/BDU_memberArea.png" onerror="this.src='images/bdu_quad.png'" alt=""/>
 			</div>
 		</div>
 	</div>
