--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-12 title">
-				<img ng-src="images/BDU_memberArea.png" onerror="this.src='images/bdu_quad.png'" alt=""/>
+				<img src="images/BDU_memberArea_512.png"
+					 srcset="images/BDU_memberArea_512.png 512w, images/BDU_memberArea_1024.png 1024w"
+					 onerror="this.src='images/bdu_quad.png'" alt=""/>
 			</div>
 		</div>
 	</div>
